// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardButton baseline should render empty 1`] = `
<div>
  <div
    class="CardButton empty pointer"
  >
    <p
      class="CardValue"
    />
    <p
      class="CardSuit"
    />
  </div>
</div>
`;

exports[`CardButton baseline should render selected 1`] = `
<div>
  <div
    class="CardButton selected pointer"
  >
    <p
      class="CardValue"
    >
      A
    </p>
    <p
      class="CardSuit"
    >
      ♥
    </p>
  </div>
</div>
`;

exports[`CardButton baseline should render unselected 1`] = `
<div>
  <div
    class="CardButton pointer"
  >
    <p
      class="CardValue"
    >
      A
    </p>
    <p
      class="CardSuit"
    >
      ♥
    </p>
  </div>
</div>
`;
